# Corte2

./: Cargo.toml  README.md  clientes.json  funcionalidades.txt  productos.json  users.json
src/: main.rs
