[package]
name = "corte2"
version = "0.1.0"
edition = "2024"

[dependencies]
winapi = { version = "0.3", features = ["winuser", "libloaderapi", "windef"] }
eframe = { version = "0.24", features = ["persistence"] }
egui_extras = { version = "0.24", features = ["all_loaders", "file", "datepicker"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"